FEAT: AUTH APIS
